hphp/hack/test/typecheck/instanceof_static_outside.php.exp
File "instanceof_static_outside.php", line 4, characters 21-26:
'static' is undefined outside of a class (Typing[4061])
