hphp/hack/test/typecheck/instanceof_static_outside.php
<?hh // strict

function f(mixed $x): void {
  if ($x instanceof static) {
    echo 'huh?';
  }
}
